@@ -9,6 +9,9 @@
   - dupeArea
   - badArea
   - echoArea
+- fix "-manual" vs. "-mandatory": 
+  manual means: subscription/unsubscription not allowed
+  mandatory means: subscription allowed, unsubscription not allowed
 
 - dump remaps, bbsareas and fileareas
 - for htick developers (add to doc & tparser):
