@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Wed May 15 07:39:00 UTC 2000
+sms:
+* using direxist() from smapi instead of readdir in parsePath()
+
+----- cvs ci ------
 Tue May 16 20:28:45 NOVST 2000
 max:
 * fix route parsing in the middle of the links
